# aictx-demo-taskflow

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.demo_metrics/with_aictx/: codex_usage_session_1.json  codex_usage_session_2.json  session_1_metrics.json  session_2_metrics.json
.demo_metrics/with_aictx/prompts/: session_1.md  session_2.md
.demo_metrics/without_aictx/: codex_usage_session_1.json  codex_usage_session_2.json  session_1_metrics.json  session_2_metrics.json
.demo_metrics/without_aictx/prompts/: session_1.md  session_2.md
docs/: DEMO_FLOW.md  EXPECTED_OUTPUTS.md  SESSION_PROMPTS.md
examples/: session_1_target.txt  tasks.txt
scripts/: codex_usage_report.py
src/taskflow/: __init__.py  cli.py  models.py  parser.py  summary.py
tests/: test_cli.py  test_parser.py  test_summary.py
