[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aictx-demo-taskflow"
version = "0.1.0"
description = "Small functional Python project used to demonstrate AICTX session continuity"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AICTX demo" }
]
license = { text = "MIT" }
keywords = ["aictx", "demo", "pytest", "cli", "coding-agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
taskflow = "taskflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
