[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aictx-demo-taskflow"
version = "0.1.0"
description = "Small demo project used to show AICTX repo-local continuity."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AICTX Demo" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
taskflow = "taskflow.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]